--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			color: white;
 			font-size: 1.2rem;
 			width: 100%;
-			position: fixed;
+			/* position: fixed; */
 			bottom: 0;
 			left: 0;
 		}
@@ -60,18 +60,19 @@
 
 		.navbar a:hover {
 			text-decoration: underline;
+            transition: 3s ease;
 		}
 	</style>
 </head>
 <body>
 	<div class="image">
 		<h1>Welcome to our website</h1>
-		<div class="navbar">
-			<a href="#">Home</a>
-			<a href="#">Contact</a>
-			<a href="#">Help</a>
-		</div>
 	</div>
+    <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Contact</a>
+        <a href="#">Help</a>
+    </div>
 	<div class="container">
 		<div class="list">
 			<h1>List of Cars</h1>
