--- a/map.html
+++ b/map.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Google Maps</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCu7gK5hk8NwuOmGTH4IRamgo17OXNBVWM"></script>
+
 </head>
 <body>
 	<h1>Google Maps</h1>
@@ -9,12 +11,38 @@
 	<br>
 	<button onclick="showLocation('https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.7169014270987!2d-73.81006358449485!3d45.51405827910138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc9117b160e1e19%3A0x92614a5587d354c1!2s540%20Autoroute%2013%2C%20Laval%2C%20QC%20H7X%203V5%2C%20Canada!5e0!3m2!1sen!2sus!4v1651282372621!5m2!1sen!2sus')">Show Location 1</button>
 	<button onclick="showLocation('https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1403.0866522948036!2d-73.75016640898767!3d45.55987010758764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a0b58c90287%3A0x1c0b17f7b68c4b30!2s2900%20Avenue%20Pierre-P%C3%A9ladeau%2C%20Laval%2C%20QC%20H7T%203B3%2C%20Canada!5e0!3m2!1sen!2sus!4v1651281143033!5m2!1sen!2sus')">Show Location 2</button>
+	<button onclick="showBothLocations()">Show Both Locations</button>
 
 	<script>
 		function showLocation(locationUrl) {
 			var mapIframe = document.getElementById('map-iframe');
 			mapIframe.src = locationUrl;
 		}
+
+		function showBothLocations() {
+        getLocationLatLng('540 Autoroute 13, Laval, QC H7X 3V5, Canada', function(lat1, lng1) {
+            getLocationLatLng('2900 Avenue Pierre-Péladeau, Laval, QC H7T 3B3, Canada', function(lat2, lng2) {
+            var mapIframe = document.getElementById('map-iframe');
+            var mapUrl = 'https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d55806.049082006255!2d' + ((lng1 + lng2) / 2) + '!3d' + ((lat1 + lat2) / 2) + '!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1651283911823!5m2!1sen!2sus';
+            mapIframe.src = mapUrl;
+            });
+        });
+        }
+        function getLocationLatLng(address, callback) {
+            var geocoder = new google.maps.Geocoder();
+            geocoder.geocode({ address: address }, function(results, status) {
+                if (status == google.maps.GeocoderStatus.OK) {
+                var lat = results[0].geometry.location.lat();
+                var lng = results[0].geometry.location.lng();
+                callback(lat, lng);
+                } else {
+                console.log('Geocode was not successful for the following reason: ' + status);
+                }
+            });
+        }
 	</script>
+
+
+
 </body>
 </html>
